--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 body {
@@ -61,6 +62,16 @@ hr {
   height: 2px;
   background-color: #fb774b;
 
+}
+
+.star
+{
+  padding: 10px 0;
+}
+
+.star i{
+  font-size: 0.8rem;
+  color: goldenrod;
 }
 
 .navbar{
@@ -209,6 +220,56 @@ background-color: rgba(245, 178, 178, 0.7);
 }
 
 
+/* Products */
+
+.product{
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.product img{
+   transition: 0.3s all;
+}
+
+.product:hover img{
+opacity: 0.7;
+}
+
+.product .buy-btn{
+  background-color: #fb774b;
+  transform: translateY(20px);
+  opacity: 0;
+  transition:  0.3a all;
+}
+.product:hover .buy-btn{
+  transform: translateY(0);
+  opacity: 1;
+}
+
+#banner{
+  background-image: url(img/banner/2.jpg);
+  width: 100%;
+  height: 60vh;
+  background-size: cover;
+  background-position: top 70px center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+#banner h4{
+  color: #D8D8D8;
+
+}
+
+#banner h1{
+  color: #fff;
+  
+}
+#banner button{
+background-color: #fb774b;
+}
 /* 
 .nav-links ul li a{
   text-decoration: none;
