--- a/style.css
+++ b/style.css
@@ -324,21 +324,27 @@ footer .copyright a:hover{
     color: #fff;
     background-color: #fb774b;
 }
-/* 
-.nav-links ul li a{
-  text-decoration: none;
-  color: black;
-  transition: 0.3s ease;
-}
-.nav-links ul li a:hover,.nav-links ul li a:active{
-  color: coral;
+
+#blog-container .post .post-img{
+  overflow: hidden  ;
+  cursor: pointer;
 }
 
-@media(max-width: 992px ){
-  .nav-links{
-    display: none;
-  }
-  .toggle-btn{
-    display: block;
-  }
-} */
+#blog-container .post img{
+  transition: 0.3s ease;
+}
+
+#blog-container .post:hover img{
+    transform:  scale(1.3) rotate(-10deg);
+    opacity: 0.8;
+}
+
+#blog-container .post h3{
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+
+#blog-container .post:hover h3{
+  color: #fd8c66;
+}
